--- a/src/posts/certificates.mdx
+++ b/src/posts/certificates.mdx
@@ -84,4 +84,5 @@ When I was in college, I started this list of things. I did some research and I 
 ## Google
 
 ## 
-<img align="center" alt="R" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1657272263/certificate_1__page-0001_hecdsg.jpg"></img>
+<img align="center" alt="Google" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1657272263/certificate_1__page-0001_hecdsg.jpg"></img>
+## 
