--- a/src/posts/certificates.mdx
+++ b/src/posts/certificates.mdx
@@ -9,6 +9,28 @@ banner: /static/hello-world-banner.jpg
 
 When I was in college, I started this list of things. I did some research and I found Sololearn, GreatLearning, and Google Digital Garage and started learning something new every day. I also started contributing to open-source projects.
 
+## Udemy
+
+## 
+<img align="center" alt="Javascript" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1661512889/udemy_yrqqgu.jpg"></img>
+##
+
+## GreatLearning
+
+## 
+<img align="center" alt="Git" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1657272096/Ravindra_Nakrani_2__page-0001_fh6qt9.jpg"></img>
+## 
+
+## 
+<img align="center" alt="Software testing" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1657272152/Ravindra_Nakrani_3__page-0001_xwholu.jpg"></img>
+## 
+
+## Google
+
+## 
+<img align="center" alt="Google" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1657272263/certificate_1__page-0001_hecdsg.jpg"></img>
+## 
+
 ## Sololearn
 
 ## 
@@ -69,20 +91,4 @@ When I was in college, I started this list of things. I did some research and I 
 
 ## 
 <img align="center" alt="R" width="100%" src="https://www.sololearn.com/certificates/course/en/19153244/1147/landscape/png"></img>
-## 
-
-## GreatLearning
-
-## 
-<img align="center" alt="Git" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1657272096/Ravindra_Nakrani_2__page-0001_fh6qt9.jpg"></img>
-## 
-
-## 
-<img align="center" alt="Software testing" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1657272152/Ravindra_Nakrani_3__page-0001_xwholu.jpg"></img>
-## 
-
-## Google
-
-## 
-<img align="center" alt="Google" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1657272263/certificate_1__page-0001_hecdsg.jpg"></img>
-## 
+##
