--- a/src/posts/certificates.mdx
+++ b/src/posts/certificates.mdx
@@ -18,11 +18,11 @@ When I was in college, I started this list of things. I did some research and I 
 ## Hackerrank
 
 ## 
-<img align="center" alt="PythonCertificate" width="100%" src="https://www.hackerrank.com/certificates/iframe/4108f1850176"></img>
+<img align="center" alt="PythonCertificate" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1669636060/python_fswzey.png"></img>
 ## 
 
 ## 
-<img align="center" alt="ProblemSolving" width="100%" src="https://www.hackerrank.com/certificates/iframe/2c32d6f8a80e"></img>
+<img align="center" alt="ProblemSolving" width="100%" src="https://res.cloudinary.com/dn2mupqo0/image/upload/v1669636061/ps_lqswa2.png"></img>
 ##
 
 ## Google
